test/syntax/08-struct_type-2-err.c
// ======================================================================

/* struct_type -> STRUCT var */

// ======================================================================

struct human {
  int age;
};

struct human int h1;	// error: two types

void main(void)
{

}

// ======================================================================
